--- a/templates/datenschutz.html
+++ b/templates/datenschutz.html
@@ -1,7 +1,68 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Datenschutz</h2>
-<p>Hier stehen die Datenschutzrichtlinien</p>
+<body class="seite-datenschutz">
+    <!-- Überschrift -->
+    <h2 class="text-center my-4">Datenschutzerklärung</h2>
 
+    <!-- Inhalt der Datenschutzerklärung -->
+    <div class="container" style="font-size: 16px; line-height: 1.8; text-align: justify;">
+        <h3>Grundlegendes</h3>
+        <p>
+            Diese Datenschutzerklärung soll die Nutzer dieser Website über die Art, den Umfang und den Zweck der Erhebung und Verwendung personenbezogener Daten durch den Websitebetreiber <strong>[Ihre Kontaktdaten einfügen]</strong> informieren.
+        </p>
+        <p>
+            Der Websitebetreiber nimmt Ihren Datenschutz sehr ernst und behandelt Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Vorschriften. Da durch neue Technologien und die ständige Weiterentwicklung dieser Webseite Änderungen an dieser Datenschutzerklärung vorgenommen werden können, empfehlen wir Ihnen, sich die Datenschutzerklärung in regelmäßigen Abständen wieder durchzulesen.
+        </p>
+        <p>
+            Definitionen der verwendeten Begriffe (z. B. “personenbezogene Daten” oder “Verarbeitung”) finden Sie in Art. 4 DSGVO.
+        </p>
+
+        <h3>Zugriffsdaten</h3>
+        <p>
+            Wir, der Websitebetreiber bzw. Seitenprovider, erheben aufgrund unseres berechtigten Interesses (s. Art. 6 Abs. 1 lit. f. DSGVO) Daten über Zugriffe auf die Website und speichern diese als „Server-Logfiles“ auf dem Server der Website ab. Folgende Daten werden so protokolliert:
+        </p>
+        <ul>
+            <li>Besuchte Website</li>
+            <li>Uhrzeit zum Zeitpunkt des Zugriffes</li>
+            <li>Menge der gesendeten Daten in Byte</li>
+            <li>Quelle/Verweis, von welchem Sie auf die Seite gelangten</li>
+            <li>Verwendeter Browser</li>
+            <li>Verwendetes Betriebssystem</li>
+            <li>Verwendete IP-Adresse</li>
+        </ul>
+        <p>
+            Die Server-Logfiles werden für maximal 7 Tage gespeichert und anschließend gelöscht. Die Speicherung der Daten erfolgt aus Sicherheitsgründen, um z. B. Missbrauchsfälle aufklären zu können. Müssen Daten aus Beweisgründen aufgehoben werden, sind sie solange von der Löschung ausgenommen, bis der Vorfall endgültig geklärt ist.
+        </p>
+
+        <h3>Reichweitenmessung & Cookies</h3>
+        <p>
+            Diese Website verwendet Cookies zur pseudonymisierten Reichweitenmessung, die entweder von unserem Server oder dem Server Dritter an den Browser des Nutzers übertragen werden. Bei Cookies handelt es sich um kleine Dateien, welche auf Ihrem Endgerät gespeichert werden. Ihr Browser greift auf diese Dateien zu. Durch den Einsatz von Cookies erhöht sich die Benutzerfreundlichkeit und Sicherheit dieser Website.
+        </p>
+        <p>
+            Falls Sie nicht möchten, dass Cookies zur Reichweitenmessung auf Ihrem Endgerät gespeichert werden, können Sie dem Einsatz dieser Dateien hier widersprechen:
+        </p>
+        <ul>
+            <li><a href="http://optout.networkadvertising.org/?c=1#!" target="_blank">Cookie-Deaktivierungsseite der Netzwerkwerbeinitiative</a></li>
+            <li><a href="http://optout.aboutads.info/?c=2#!" target="_blank">Cookie-Deaktivierungsseite der US-amerikanischen Website</a></li>
+            <li><a href="http://optout.networkadvertising.org/?c=1#!" target="_blank">Cookie-Deaktivierungsseite der europäischen Website</a></li>
+        </ul>
+        <p>
+            Gängige Browser bieten die Einstellungsoption, Cookies nicht zuzulassen. Hinweis: Es ist nicht gewährleistet, dass Sie auf alle Funktionen dieser Website ohne Einschränkungen zugreifen können, wenn Sie entsprechende Einstellungen vornehmen.
+        </p>
+
+        <h3>Erfassung und Verarbeitung personenbezogener Daten</h3>
+        <p>
+            Der Websitebetreiber erhebt, nutzt und gibt Ihre personenbezogenen Daten nur dann weiter, wenn dies im gesetzlichen Rahmen erlaubt ist oder Sie in die Datenerhebung einwilligen.
+        </p>
+        <p>
+            Als personenbezogene Daten gelten sämtliche Informationen, welche dazu dienen, Ihre Person zu bestimmen und welche zu Ihnen zurückverfolgt werden können – also beispielsweise Ihr Name, Ihre E-Mail-Adresse und Telefonnummer.
+        </p>
+        <p>
+            Diese Website können Sie auch besuchen, ohne Angaben zu Ihrer Person zu machen. Zur Verbesserung unseres Online-Angebotes speichern wir jedoch (ohne Personenbezug) Ihre Zugriffsdaten auf diese Website. Zu diesen Zugriffsdaten gehören z. B. die von Ihnen angeforderte Datei oder der Name Ihres Internet-Providers. Durch die Anonymisierung der Daten sind Rückschlüsse auf Ihre Person nicht möglich.
+        </p>
+
+        <p>Falls Sie Fragen oder Anliegen zum Datenschutz haben, kontaktieren Sie uns bitte unter <strong>petmatch@web.de</strong></p>
+    </div>
+</body>
 {% endblock %}
