--- a/templates/beitraege_erstellen.html
+++ b/templates/beitraege_erstellen.html
@@ -6,6 +6,16 @@
     <!-- Überschrift -->
     <h2 class="text-center my-4">Beitrag erstellen</h2> <!-- Zentrierung und Abstände -->
 
+    <!-- Profilbild mit logout-Button -->
+    <form method="POST" action="{{ url_for('logout') }}">
+        <div class="d-flex justify-content-end mt-5">
+            <img src="static/bilder/profilbild-platzhalter.png" class="rounded" alt="Profilbild">
+        </div>
+        <div class="d-flex justify-content-end mt-6">
+            <button type="submit" class="btn btn-primary" style="width: 200px;">ausloggen</button>
+        </div>
+    </form>
+
     <div class="container mt-5">
         <!-- Formular für die Erstellung eines Beitrages-->
         <form method="post" action="/beitrag_erstellen" enctype="multipart/form-data">
@@ -18,25 +28,23 @@
                         value="{{ tier.tier_name if tier else '' }}">
                 </div>
                 <div class="mb-3">
-                    <textarea class="form-control" id="das_mag_ich" name="das_mag_ich" rows="2"
+                    <textarea class="form-control" id="beitrag_erstellen" name="beitrag_erstellen" rows="6"
                         placeholder="z.B. Heute hatten wir einen tollen Tag am Hundestrand.">{{ tier.das_mag_ich if tier else '' }}</textarea>
                 </div>
             </div>
+        </form>
     </div>
 
     <!-- Button zum Foto hochladen -->
     <div class="text-center mt-3">
         <button type="submit" class="btn btn-primary" style="width: 200px;">Foto hochladen</button>
     </div>
-    </form>
+
+    <!-- Button zum Posten -->
+    <div class="text-center mt-4">
+        <button type="submit" class="btn btn-primary" style="width: 200px;">Betrag posten</button>
     </div>
+
 </body>
 
-<!-- Button zum Posten -->
-<div class="text-center mt-4">
-    <button type="submit" class="btn btn-primary" style="width: 200px;">Betrag posten</button>
-</div>
-</form>
-</div>
-</body>
 {% endblock %}
